--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-    "name": "tinyrocket",
-    "version": "0.9.14",
-    "private": true,
-    "scripts": {
-        "dev": "astro dev",
-        "start": "astro dev",
-        "build": "astro build",
-        "preview": "astro preview"
-    },
-    "devDependencies": {
-        "@astrojs/mdx": "^1.1.0",
-        "@astrojs/preact": "^3.0.0",
-        "@astrojs/sitemap": "^3.0.0",
-        "@astrojs/tailwind": "^5.0.0",
-        "astro": "^3.1.0",
-        "postcss": "^8.4.29"
-    },
-    "dependencies": {
-        "@astrojs/rss": "^3.0.0",
-        "@tailwindcss/typography": "^0.5.10",
-        "preact": "^10.15.1"
-    }
+  "name": "tinyrocket",
+  "version": "0.9.14",
+  "private": true,
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
+  },
+  "devDependencies": {
+    "@astrojs/mdx": "^1.1.0",
+    "@astrojs/preact": "^3.0.0",
+    "@astrojs/sitemap": "^3.0.0",
+    "@astrojs/tailwind": "^5.0.0",
+    "astro": "^3.1.0",
+    "postcss": "^8.4.29"
+  },
+  "dependencies": {
+    "@astrojs/rss": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "preact": "^10.15.1",
+    "tailwindcss": "^3.3.3"
+  }
 }
